force-app/main/default/objects/RMAProductSparePartsMapping__c/RMAProductSparePartsMapping__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>RMA Product-SpareParts Mapping</label>
</CustomObject>