force-app/main/default/objects/RMAProductSparePartsMapping__c/fields/HDD__c.field-meta.xml
<CustomField>
    <fullName>HDD__c</fullName>
    <label>HDD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>