force-app/main/default/objects/RMAProductSparePartsMapping__c/fields/Memory__c.field-meta.xml
<CustomField>
    <fullName>Memory__c</fullName>
    <label>Memory</label>
    <length>255</length>
    <type>Text</type>
</CustomField>