force-app/main/default/objects/RMAProductSparePartsMapping__c/fields/NIC__c.field-meta.xml
<CustomField>
    <fullName>NIC__c</fullName>
    <label>NIC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>