force-app/main/default/objects/RMAProductSparePartsMapping__c/fields/Node__c.field-meta.xml
<CustomField>
    <fullName>Node__c</fullName>
    <label>Node</label>
    <length>255</length>
    <type>Text</type>
</CustomField>