force-app/main/default/objects/RMAProductSparePartsMapping__c/fields/SSD__c.field-meta.xml
<CustomField>
    <fullName>SSD__c</fullName>
    <label>SSD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>